# hastlefam

./: .env.example  CLAUDE.md  Procfile  README.md  alembic.ini  pyproject.toml  railway.json  requirements.txt
app/: main.py
app/api/: deps.py
app/api/routers/: finance.py  reviews.py  tasks.py
app/api/schemas/: finance.py  tasks.py
app/application/dto/: llm_contracts.py
app/bot/: main.py
app/domain/: enums.py
app/observability/: error_handler.py  event_logger.py  prompt_logger.py
app/seeds/: run_all.py  seed_areas.py  seed_finance_categories.py  seed_owners.py  seed_users.py
docs/: architecture.md  hastlefam_copy_pack.md  hastlefam_copy_system.md  hastlefam_execution_pack.md  hastlefam_gaps.md  hastlefam_product_contract.md  llm_contracts.md  money_mvp.md  sprint1_backlog.md
migrations/: env.py  manual_apply.sql
migrations/versions/: 0001_initial_schema.py  0002_seed_defaults.py  0003_legacy_public_to_hastlefam.py  0003_move_version_table_to_hastlefam.py  0004_money_mvp_slice.py  0005_add_tags_to_transaction.py  0006_add_planned_payments.py  0007_add_exchange_direction.py  0008_add_exchange_fields_to_transaction.py  0009_add_balance_snapshot.py  0010_account_id_on_transactions.py  0011_fx_rates.py  0012_backfill_default_account.py  0013_sql_functions_and_merchant_rules.py  0014_add_is_planned_to_transactions.py  0015_category_budgets.py  0016_debts.py  0017_is_skipped.py  0018_budget_rollover.py  0019_tag_budget.py  0020_add_is_internal_transfer.py
tests/: conftest.py  test_capture.py  test_finance_service.py  test_health.py  test_import_service.py
(+46 files in other folders)
