[project]
name = "hastlefam"
version = "0.1.0"
description = "Telegram-first family operating system MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.3",
  "psycopg>=3.2.3",
  "psycopg-binary>=3.2.3",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.1",
  "aiogram>=3.15.0",
  "openai>=1.54.0",
  "structlog>=24.4.0",
  "jinja2>=3.1.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
